# thymus

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rust-toolchain.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/common/: Cargo.toml
crates/common/src/: events.rs  lib.rs  memory.rs  mutation.rs  profile.rs  tolerance.rs
crates/core/: Cargo.toml  askama.toml
crates/core/src/: alerting.rs  api.rs  auth.rs  dashboard.rs  db.rs  main.rs  metrics.rs  profiler.rs  resolver.rs  state.rs
crates/core/templates/: base.html  history.html  login.html  machines.html  mutations.html  network.html  status.html
crates/core/templates/partials/: chains.html  history.html  machines_list.html  mutations_full.html  network_graph.html  profiles_summary.html  recent_mutations.html  status_cards.html
crates/detection/: Cargo.toml
crates/detection/src/: adaptive.rs  beacon.rs  clonal.rs  engine_tests.rs  exfil.rs  innate.rs  lateral.rs  lib.rs  memory.rs  scoring.rs  tests.rs
crates/sensor/: Cargo.toml
crates/sensor/src/: buffer.rs  capture.rs  collector.rs  flows.rs  main.rs  procinfo.rs  sender.rs
crates/sensor/src/collector/: fallback.rs  linux.rs  mod.rs  windows.rs
deploy/docker/: attack-sim.py  traffic-sim.py
docs/: Thymos_Document_Technique.md  Thymus_Document_Technique.md  generate_pdf.py
docs/rfcs/: 0001-wasm-detector-plugins.md
site/: index.html
