[workspace]
members = [
    "crates/common",
    "crates/detection",
    "crates/sensor",
    "crates/core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Thymos Team"]
license = "AGPL-3.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

thymos-common = { path = "crates/common" }
thymos-detection = { path = "crates/detection" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
