[package]
name = "thymos-detection"
version.workspace = true
edition.workspace = true

[dependencies]
thymos-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
