[package]
name = "thymus-detection"
version.workspace = true
edition.workspace = true

[dependencies]
thymus-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
