[package]
name = "thymos-sensor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "thymos-sensor"
path = "src/main.rs"

[dependencies]
thymos-common = { workspace = true }
thymos-detection = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
