[package]
name = "thymos-sensor"
version.workspace = true
edition.workspace = true

[[bin]]
name = "thymos-sensor"
path = "src/main.rs"

[dependencies]
thymos-common = { workspace = true }
thymos-detection = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

# Passive capture (packet sniffing) — not built on Windows, where it would
# require the Npcap SDK to link.
[target.'cfg(not(windows))'.dependencies]
pnet_datalink = "0.35"
pnet_packet = "0.35"

# Windows host-mode collection via ETW.
[target.'cfg(windows)'.dependencies]
ferrisetw = "1.1"

[lints]
workspace = true
